--- a/.github/workflows/build-wheels-win-test.yml
+++ b/.github/workflows/build-wheels-win-test.yml
@@ -3,7 +3,7 @@ name: Build wheels (test)
 # Run workflow on new releases, and allow manual runs.
 on:
   release:
-    types: [published, created]
+    types: [published]
   workflow_dispatch:
 
 permissions:
@@ -17,8 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
-          - macos-latest
+          # - ubuntu-latest
+          # - macos-latest
           - windows-latest
 
     env:
@@ -74,11 +74,11 @@ jobs:
       contents: write
 
     steps:
-      - name: Download artifacts (Ubuntu)
-        uses: actions/download-artifact@v4
-        with:
-          name: wheelhouse-ubuntu-latest
-          path: ./dist-ubuntu
+      # - name: Download artifacts (Ubuntu)
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: wheelhouse-ubuntu-latest
+      #     path: ./dist-ubuntu
 
       - name: Download artifacts (Windows)
         uses: actions/download-artifact@v4
@@ -86,18 +86,18 @@ jobs:
           name: wheelhouse-windows-latest
           path: ./wheelhouse-windows
 
-      - name: Download artifacts (macOS)
-        uses: actions/download-artifact@v4
-        with:
-          name: wheelhouse-macos-latest
-          path: ./wheelhouse-macos
+      # - name: Download artifacts (macOS)
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: wheelhouse-macos-latest
+      #     path: ./wheelhouse-macos
 
       - name: Combine artifacts
         run: |
           mkdir -p dist
-          cp ./wheelhouse-ubuntu/* dist/ || true
+          # cp ./wheelhouse-ubuntu/* dist/ || true
           cp ./wheelhouse-windows/* dist/ || true
-          cp ./wheelhouse-macos/* dist/ || true
+          # cp ./wheelhouse-macos/* dist/ || true
 
       - name: List ./dist
         run: ls ./dist
