--- a/.github/workflows/build-wheels-win-test.yml
+++ b/.github/workflows/build-wheels-win-test.yml
@@ -16,10 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os:
-          # - ubuntu-latest
-          # - macos-latest
-          - windows-latest
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-14]
 
     env:
       LIBUSB_PACKAGE_NAME: libusb-package-weekly  # Define the new package name
@@ -27,15 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: 'pyocd/libusb-package'
-          ref: 'main'
           submodules: 'recursive'
-
-      - name: Set up QEMU
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
 
       - uses: actions/setup-python@v5
         name: Install Python
@@ -74,11 +63,17 @@ jobs:
       contents: write
 
     steps:
-      # - name: Download artifacts (Ubuntu)
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: wheelhouse-ubuntu-latest
-      #     path: ./dist-ubuntu
+      - name: Download artifacts (Ubuntu)
+        uses: actions/download-artifact@v4
+        with:
+          name: wheelhouse-ubuntu-latest
+          path: ./dist-ubuntu
+
+      - name: Download artifacts (Ubuntu ARM)
+        uses: actions/download-artifact@v4
+        with:
+          name: wheelhouse-ubuntu-24.04-arm
+          path: ./dist-ubuntu-24.04-arm
 
       - name: Download artifacts (Windows)
         uses: actions/download-artifact@v4
@@ -86,18 +81,26 @@ jobs:
           name: wheelhouse-windows-latest
           path: ./wheelhouse-windows
 
-      # - name: Download artifacts (macOS)
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: wheelhouse-macos-latest
-      #     path: ./wheelhouse-macos
+      - name: Download artifacts (macOS-13)
+        uses: actions/download-artifact@v4
+        with:
+          name: wheelhouse-macos-13
+          path: ./wheelhouse-macos-13
+
+      - name: Download artifacts (macOS-14)
+        uses: actions/download-artifact@v4
+        with:
+          name: wheelhouse-macos-14
+          path: ./wheelhouse-macos-14
 
       - name: Combine artifacts
         run: |
           mkdir -p dist
-          # cp ./wheelhouse-ubuntu/* dist/ || true
+          cp ./wheelhouse-ubuntu/* dist/ || true
+          cp ./wheelhouse-ubuntu-24.04-arm/* dist/ || true
           cp ./wheelhouse-windows/* dist/ || true
-          # cp ./wheelhouse-macos/* dist/ || true
+          cp ./wheelhouse-macos-13/* dist/ || true
+          cp ./wheelhouse-macos-14/* dist/ || true
 
       - name: List ./dist
         run: ls ./dist
