--- a/.github/workflows/build-wheels-win-test.yml
+++ b/.github/workflows/build-wheels-win-test.yml
@@ -16,10 +16,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-14]
-
-    env:
-      LIBUSB_PACKAGE_NAME: libusb-package-weekly  # Define the new package name
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -37,22 +37,6 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Override package name in setup.cfg (Linux)
-        run: sed -i 's/^name = libusb-package$/name = '"$LIBUSB_PACKAGE_NAME"'/' setup.cfg
-        shell: bash
-        if: runner.os == 'Linux'
-
-      - name: Override package name in setup.cfg (macOS)
-        run: sed -i '' 's/^name = libusb-package$/name = '"$LIBUSB_PACKAGE_NAME"'/' setup.cfg
-        shell: bash
-        if: runner.os == 'macOS'
-
-      - name: Override package name in setup.cfg (Windows)
-        run: |
-          (Get-Content setup.cfg) -replace '^name = libusb-package$', "name = $env:LIBUSB_PACKAGE_NAME" | Set-Content setup.cfg
-        shell: pwsh
-        if: runner.os == 'Windows'
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21.3
 
@@ -60,7 +44,6 @@ jobs:
         with:
           name: wheelhouse-${{ matrix.os }}
           path: ./wheelhouse/*.whl
-
 
   collect_artifacts:
     needs: build_wheels
