publish api 2.4 fix

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,8 @@ package_dir =
 zip_safe = False
 install_requires =
     importlib_resources
+license-files =
+
 
 [options.packages.find]
 where = src
