--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ url = https://github.com/pyocd/libusb-package
 author = Chris Reed
 author_email = flit@me.com
 license = Apache 2.0
-license_file = LICENSE
+license_files = LICENSE
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
@@ -39,15 +39,13 @@ project_urls =
 
 [options]
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.9
 include_package_data = True
 package_dir =
     =src
 zip_safe = False
 install_requires =
     importlib_resources
-license-files =
-
 
 [options.packages.find]
 where = src
