autobuild and deploy to pypi mirror (#1)
* autobuild
* sync fork
* ci fix
* publish api 2.4 fix
* python_requires>=3.9

---------

Co-authored-by: Salamist <31216142+Salamist@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ pyinstaller40 =
     hook-dirs = libusb_package.__pyinstaller:get_hook_dirs
 
 [metadata]
-name = libusb-package
+name = libusb-pkg
 description = Package containing libusb so it can be installed via Python package managers
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -12,7 +12,7 @@ url = https://github.com/pyocd/libusb-package
 author = Chris Reed
 author_email = flit@me.com
 license = Apache 2.0
-license_file = LICENSE
+license_files = LICENSE
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
@@ -39,7 +39,7 @@ project_urls =
 
 [options]
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.9
 include_package_data = True
 package_dir =
     =src
