--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "setuptools>=42",
+    "setuptools>=77.0.3",
     "setuptools_scm[toml]>=6.2",
     "wheel",
     "tomli",
@@ -10,6 +10,7 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools_scm]
 write_to = "src/libusb_package/_version.py"
 fallback_version = "1.0.0.0"
+local_scheme = "no-local-version"
 
 [tool.mypy]
 files = "src/libusb_package"
